--- a/Style.css
+++ b/Style.css
@@ -1,124 +1,100 @@
 body{
-	background-color: #aaa;
+	background-color: #cccc99;
 }
 
-#mainWrapper{
+#Panel{
 	position: absolute;
-	left:0px;
-	top:0px;
-	width: 100%;
+	left: 0px;
+	top: 0px;
+	width: 20%;
 	height: 100%;
 }
 
-#wrapper{
+#ContentPanel{
 	position: absolute;
-	top:0px;
-	left:20%;
+	left: 0px;
+	top: 0px;
+	bottom: 0px;
+	right: 0px;
+	margin: auto;
+	width: 100%;
+	height: 99%;
+	background: #000;
+}
+
+#Rezults{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 40%;
+	background-color: #fff;
+}
+
+#Main{
+	position: absolute;
+	left: 20%;
+	top: 0px;
 	width: 80%;
 	height: 100%;
 }
 
-#board{
+#Left{
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 50%;
+	height: 100%;
+}
+
+#Right{
+	position: absolute;
+	left: 50%;
+	top: 0px;
+	width: 50%;
+	height: 100%;
+}
+
+#Code1, #Code2{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: 20%;
-	height: 100%;
-	
-	background: rgb(214,214,214); /* Old browsers */
-	background: -moz-linear-gradient(left,  rgba(214,214,214,1) 64%, rgba(178,178,178,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(64%,rgba(214,214,214,1)), color-stop(100%,rgba(178,178,178,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left,  rgba(214,214,214,1) 64%,rgba(178,178,178,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left,  rgba(214,214,214,1) 64%,rgba(178,178,178,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left,  rgba(214,214,214,1) 64%,rgba(178,178,178,1) 100%); /* IE10+ */
-	background: linear-gradient(to right,  rgba(214,214,214,1) 64%,rgba(178,178,178,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6d6d6', endColorstr='#b2b2b2',GradientType=1 ); /* IE6-9 */
-} 
-
-.codeBox{
-	position: absolute;
 	width: 100%;
-	height: 100%;
-	resize: none;
-	border: none;
-
-} 
-
-.WinputBox{
-	position: absolute;	
-	width: 50%;
-	height: 30%;
-	background-color: #aaa;
-}
-
-.inputBox{
-	position: absolute;	
-	width: 99%;
-	height: 99%;
-	resize: none;
-
-	background: rgb(252,252,252); /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%, rgba(234,234,234,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(60%,rgba(252,252,252,1)), color-stop(100%,rgba(234,234,234,1))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* IE10+ */
-	background: radial-gradient(ellipse at center,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#eaeaea',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-}
-
-
-#right, #left{
-	position: absolute;
-	width: 50%;
 	height: 70%;
 }
 
-#right{
-	left: 50%;
-	top: 0px;
-}
-
-#left{
-	left: 0px;
-	top: 0px;
-}
-
-
-#code{
-	left: 0px;
-	top: 0px;
-	overflow-y:auto;
-}
-
-#sudo{
-	left: 0px;
-	top: 0px;
-	width: 99%;
-	height: 99%;
-	border:1px solid;
-	border-color: #000;
-
-	background: rgb(252,252,252); /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%, rgba(234,234,234,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(60%,rgba(252,252,252,1)), color-stop(100%,rgba(234,234,234,1))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* IE10+ */
-	background: radial-gradient(ellipse at center,  rgba(252,252,252,1) 60%,rgba(234,234,234,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#eaeaea',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-}
-
-#S1Wrapper{
+#Input1, #Input2{
+	position: absolute;
 	top: 70%;
 	left: 0px;
+	width: 100%;
+	height: 30%;
 }
 
-#S2Wrapper{
-	top: 70%;
-	left: 50%;
+#S1, #S2{
+	position: absolute;
+	width: 98%;
+	height: 98%;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	margin: auto;
+	resize: none;
+	border: none;
+}
+
+#CodeWrap, #TableWrap{
+	position: absolute;
+	width: 98%;
+	height: 98%;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	margin: auto;
+	background-color: #fff;
+	overflow-y: auto;
 }
 
 ol {
@@ -126,10 +102,11 @@ ol {
 	overflow:auto;
 	font-family: 'Inconsolata', serif;
 	margin:0;
-	padding:0em 0 0em 2.8em;
 	color:#fff;
-	width:90%;
-	border: 1px solid;
+	width:91.5%;
+	border-right: 1px solid;
+	border-left: 1px solid;
+	border-top: 1px solid;
 	border-color: #000;
 }
 ol li:nth-child(even){
@@ -138,7 +115,7 @@ ol li:nth-child(even){
 ol li:nth-child(odd){
 	background:#ddd;
 }
-#code ol code {
+#CodeWrap ol code {
 	color:#036;
 	word-wrap: break-word;
 }
