--- a/Style.css
+++ b/Style.css
@@ -119,3 +119,12 @@ ol li:nth-child(odd){
 	color:#036;
 	word-wrap: break-word;
 }
+
+#canvas{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background-color: #f00;
+}
