--- a/Style.css
+++ b/Style.css
@@ -19,7 +19,7 @@ body{
 	margin: auto;
 	width: 100%;
 	height: 99%;
-	background: #000;
+	background: #0f0;
 }
 
 #Rezults{
@@ -126,5 +126,5 @@ ol li:nth-child(odd){
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	background-color: #f00;
+	background-color: #fff;
 }
