--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,9 @@
 body{
-	background-color: #cccc99;
+	background-color: rgb(190, 190, 190);
+	-moz-user-select: none; 
+    -khtml-user-select: none; 
+    -webkit-user-select: none; 
+    -o-user-select: none;
 }
 
 #Panel{
@@ -19,7 +23,9 @@ body{
 	margin: auto;
 	width: 100%;
 	height: 99%;
-	background: #0f0;
+	box-shadow:inset 0 0 20px #000000;
+	-moz-box-shadow:inset 0 0 20px #000000;
+	background: #3E424B;
 }
 
 #Rezults{
@@ -28,7 +34,14 @@ body{
 	top: 0px;
 	width: 100%;
 	height: 40%;
-	background-color: #fff;
+}
+
+#Extras{
+	position: absolute;
+	left: 0px;
+	top: 40%;
+	width: 100%;
+	height: 60%;
 }
 
 #Main{
@@ -61,6 +74,7 @@ body{
 	left: 0px;
 	width: 100%;
 	height: 70%;
+
 }
 
 #Input1, #Input2{
@@ -93,8 +107,22 @@ body{
 	left: 0px;
 	right: 0px;
 	margin: auto;
-	background-color: #fff;
 	overflow-y: auto;
+}
+
+#CodeWrap{
+	-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    cursor:default;
+}
+
+#TableWrap{
+	   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+    -o-user-select: none;
 }
 
 ol {
@@ -127,4 +155,129 @@ ol li:nth-child(odd){
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
+}
+#Number,#Sequence{
+	position: absolute;
+	left: 0px;
+	width: 100%;
+	resize: none;
+	overflow-y: auto;
+	border:none;
+	outline:none;
+	background: none;
+}
+
+#NumberTitle{
+	position: absolute;
+	top:2%;
+	left: 3%;
+	width: 94%;
+	height:10%;
+	text-align:center;
+}
+#SequenceTitle{
+position: absolute;
+top: 30%;
+left: 0px;
+width: 100%;
+height: 10%;
+text-align:center;
+}
+
+#Number{
+	top:12%;
+	height:20%;
+	-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    text-align:center;
+     font-size: 200%;
+}
+#Sequence{
+	top:40%;
+	height:60%;
+	-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    text-align:center;
+}
+
+#pseudo{
+	position: absolute;
+	right: 6%;
+	top: 2%;
+	width: 20%;
+	height:3%;
+	background:  rgba(255, 255, 255, .4);
+	outline: solid #ccc 1px;
+	-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    text-align:center;
+    font-family: 'Inconsolata', serif;
+    font-size: 90%;
+    color: black;
+}
+#pseudo:hover{
+	color: red;
+	cursor:pointer;
+	background: rgba(255, 255, 255, 1);
+}
+
+#javascript{
+	position: absolute;
+	right: 6%;
+	top: 6%;
+	width: 20%;
+	height:3%;
+	background:  rgba(255, 255, 255, .4);
+	outline: solid #ccc 1px;
+	-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    text-align:center;
+    font-family: 'Inconsolata', serif;
+    font-size: 90%;
+}
+#javascript:hover{
+	color: red;
+	cursor:pointer;
+	background: rgba(255, 255, 255, 1);
+}
+#C{
+	position: absolute;
+	right: 6%;
+	top: 10%;
+	width: 20%;
+	height:3%;
+	background:  rgba(255, 255, 255, .4);
+	outline: solid #ccc 1px;
+		-moz-user-select: text; 
+    -khtml-user-select: text; 
+    -webkit-user-select: text; 
+    -o-user-select: text;
+    text-align:center;
+    font-family: 'Inconsolata', serif;
+    font-size: 90%;
+}
+#C:hover{
+	color: red;
+	cursor:pointer;
+	background:  rgba(255, 255, 255, 1);
+}
+
+#NumberTitle, #SequenceTitle, #Number, #Sequence {
+	color: rgba(255, 255, 255, 0.6);
+}
+
+#NumberTitle{
+    background: -moz-linear-gradient(top, #f6e6b4 0%, #ed9017 100%); /* firefox */
+    -moz-box-shadow:    inset 0 0 20px rgba(0,0,0,.6);
+   -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,.6);
+   box-shadow:         inset 0 0 20px rgba(0,0,0,.6);
+    background: rgb(56,59,62);
 }
